(controls) Added overflow: hidden to prevent button bleed

--- a/client/app/components/toolbar/components/ComicControls.pcss
+++ b/client/app/components/toolbar/components/ComicControls.pcss
@@ -7,6 +7,7 @@
   align-items: flex-end;
   justify-content: space-between;
   padding-top: 10px;
+  overflow: hidden;
 
   @media (--portrait-tablets) {
     flex-direction: row;
